// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loading With default options 1`] = `
<div
  className="card"
  style={
    Object {
      "border": "none",
      "boxShadow": "none",
      "width": "100%",
    }
  }
>
  <div
    className="card-body"
  >
    <div
      className="card-title"
    >
      <div
        className="loading-state fake-head mb-3"
      />
    </div>
    <span
      className="sr-only"
    >
      Loading ...
    </span>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="loading-state mt-3"
          style={
            Object {
              "height": "18px",
              "marginBottom": "3px",
              "width": "65px",
            }
          }
        />
        <div
          className="loading-state"
          style={
            Object {
              "height": "16px",
              "width": "150px",
            }
          }
        />
      </div>
      <div
        className="col"
      >
        <div
          className="loading-state mt-3"
          style={
            Object {
              "height": "18px",
              "marginBottom": "3px",
              "width": "65px",
            }
          }
        />
        <div
          className="loading-state"
          style={
            Object {
              "height": "16px",
              "width": "150px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TransferConfirmation isOpen=false 1`] = `<div />`;

exports[`Storyshots TransferConfirmation isOpen=true 1`] = `
<div>
  <portal-dummy>
    <div
      className=""
    >
      <div
        className="modal fade"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="dialog"
        style={
          Object {
            "display": "block",
          }
        }
        tabIndex="-1"
      >
        <div
          className="modal-dialog modal-dialog-centered"
          role="document"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h5
                className="modal-title"
              >
                You will transfer to a new Supervisor (& Team)
              </h5>
              <button
                className="close"
                onClick={[Function]}
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              Explicit information about the transfer to include the Person
    being transffered, from what Team and Super, to what team and Supervisor.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu
    porttitor ex. Nam luctus tincidunt dui, sit amet semper mi consequat eu.
              <div
                className="sc-bdVaJa gYWbJm"
              />
              <div
                className="sc-bwzfXH bwzfLG"
              >
                <img
                  alt="Avatar of  Mark Phillips"
                />
                <div
                  className="team"
                >
                  <span>
                    GA
                  </span>
                </div>
                <div
                  className="name"
                >
                  <h2>
                    Mark Phillips
                  </h2>
                  <span>
                    Team: Global Affairs Advocacy
                  </span>
                </div>
                <div
                  className="break"
                >
                  <div />
                </div>
                <img
                  alt="Avatar of  Clara MacKinnon"
                />
                <div
                  className="name"
                >
                  <h2>
                    Clara MacKinnon
                  </h2>
                </div>
                <img
                  alt="Avatar of  Mia Jarrel"
                />
                <div
                  className="team new"
                >
                  <span>
                    DT
                  </span>
                </div>
                <div
                  className="name"
                >
                  <h2>
                    Mia Jarrel
                  </h2>
                  <span>
                    Team: Default
                  </span>
                </div>
              </div>
            </div>
            <div
              className="modal-footer"
            >
              <button
                aria-label={null}
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Primary
              </button>
              <button
                aria-label={null}
                className="btn btn-secondary"
                onClick={[Function]}
                type="button"
              >
                Secondary
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="modal-backdrop fade"
      />
    </div>
  </portal-dummy>
</div>
`;

exports[`Storyshots TransferConfirmation with click handlers 1`] = `
<div>
  <portal-dummy>
    <div
      className=""
    >
      <div
        className="modal fade"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="dialog"
        style={
          Object {
            "display": "block",
          }
        }
        tabIndex="-1"
      >
        <div
          className="modal-dialog modal-dialog-centered"
          role="document"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h5
                className="modal-title"
              >
                You will transfer to a new Supervisor (& Team)
              </h5>
              <button
                className="close"
                onClick={[Function]}
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              Explicit information about the transfer to include the Person
    being transffered, from what Team and Super, to what team and Supervisor.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu
    porttitor ex. Nam luctus tincidunt dui, sit amet semper mi consequat eu.
              <div
                className="sc-bdVaJa gYWbJm"
              />
              <div
                className="sc-bwzfXH bwzfLG"
              >
                <img
                  alt="Avatar of  Mark Phillips"
                />
                <div
                  className="team"
                >
                  <span>
                    GA
                  </span>
                </div>
                <div
                  className="name"
                >
                  <h2>
                    Mark Phillips
                  </h2>
                  <span>
                    Team: Global Affairs Advocacy
                  </span>
                </div>
                <div
                  className="break"
                >
                  <div />
                </div>
                <img
                  alt="Avatar of  Clara MacKinnon"
                />
                <div
                  className="name"
                >
                  <h2>
                    Clara MacKinnon
                  </h2>
                </div>
                <img
                  alt="Avatar of  Mia Jarrel"
                />
                <div
                  className="team new"
                >
                  <span>
                    DT
                  </span>
                </div>
                <div
                  className="name"
                >
                  <h2>
                    Mia Jarrel
                  </h2>
                  <span>
                    Team: Default
                  </span>
                </div>
              </div>
            </div>
            <div
              className="modal-footer"
            >
              <button
                aria-label={null}
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Primary
              </button>
              <button
                aria-label={null}
                className="btn btn-secondary"
                onClick={[Function]}
                type="button"
              >
                Secondary
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="modal-backdrop fade"
      />
    </div>
  </portal-dummy>
</div>
`;

exports[`Storyshots TransferConfirmation with custom text 1`] = `
<div>
  <portal-dummy>
    <div
      className=""
    >
      <div
        className="modal fade"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="dialog"
        style={
          Object {
            "display": "block",
          }
        }
        tabIndex="-1"
      >
        <div
          className="modal-dialog modal-dialog-centered"
          role="document"
        >
          <div
            className="modal-content"
          >
            <div
              className="modal-header"
            >
              <h5
                className="modal-title"
              >
                Custom title
              </h5>
              <button
                className="close"
                onClick={[Function]}
              >
                ×
              </button>
            </div>
            <div
              className="modal-body"
            >
              Custom dialog body
              <div
                className="sc-bdVaJa gYWbJm"
              />
              <div
                className="sc-bwzfXH bwzfLG"
              >
                <img
                  alt="Avatar of  Mark Phillips"
                />
                <div
                  className="team"
                >
                  <span>
                    GA
                  </span>
                </div>
                <div
                  className="name"
                >
                  <h2>
                    Mark Phillips
                  </h2>
                  <span>
                    Team: Global Affairs Advocacy
                  </span>
                </div>
                <div
                  className="break"
                >
                  <div />
                </div>
                <img
                  alt="Avatar of  Clara MacKinnon"
                />
                <div
                  className="name"
                >
                  <h2>
                    Clara MacKinnon
                  </h2>
                </div>
                <img
                  alt="Avatar of  Mia Jarrel"
                />
                <div
                  className="team new"
                >
                  <span>
                    DT
                  </span>
                </div>
                <div
                  className="name"
                >
                  <h2>
                    Mia Jarrel
                  </h2>
                  <span>
                    Team: Default
                  </span>
                </div>
              </div>
            </div>
            <div
              className="modal-footer"
            >
              <button
                aria-label={null}
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Custom Primary
              </button>
              <button
                aria-label={null}
                className="btn btn-secondary"
                onClick={[Function]}
                type="button"
              >
                Custom Secondary
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="modal-backdrop fade"
      />
    </div>
  </portal-dummy>
</div>
`;
